Finalizado a la espera del feedback

--- a/index.html
+++ b/index.html
@@ -2,11 +2,43 @@
 <html lang="es" translate="no">
   <head>
     <meta name="google" content="notranslate" />
-
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Naval Paraná</title>
+
+    <!-- SEO improvements -->
+    <title>Naval Paraná SRL</title>
+    <meta
+      name="description"
+      content="Naval Paraná SRL ofrece servicios navales, logística y soluciones integrales en Argentina. Experiencia, calidad y compromiso."
+    />
+    <meta
+      name="keywords"
+      content="Naval Paraná, servicios navales, logística, transporte, Argentina, barcos, puerto"
+    />
+    <meta name="author" content="Naval Paraná SRL" />
+
+    <!-- Open Graph for social sharing -->
+    <meta
+      property="og:title"
+      content="Naval Paraná SRL | Servicios navales y logística en Argentina"
+    />
+    <meta
+      property="og:description"
+      content="Soluciones integrales en servicios navales y logística. Experiencia y calidad en Argentina."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://navalparana.com.ar/" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Naval Paraná SRL" />
+    <meta
+      name="twitter:description"
+      content="Servicios navales y logística en Argentina."
+    />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
   <body>
     <div id="root"></div>
