--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <title>Naval Paraná SRL</title>
     <meta
       name="description"
-      content="Naval Paraná SRL ofrece servicios navales, logística y soluciones integrales en Argentina. Experiencia, calidad y compromiso."
+      content="Naval Paraná SRL, dedicada a reparaciones, ingeniería y montajes en el ámbito fluvial y marítimo portuario."
     />
     <meta
       name="keywords"
-      content="Naval Paraná, servicios navales, logística, transporte, Argentina, barcos, puerto"
+      content="Naval Paraná SRL, dedicada a reparaciones, ingeniería y montajes en el ámbito fluvial y marítimo portuario."
     />
     <meta name="author" content="Naval Paraná SRL" />
 
     <!-- Open Graph for social sharing -->
     <meta
       property="og:title"
-      content="Naval Paraná SRL | Servicios navales y logística en Argentina"
+      content="Naval Paraná SRL | dedicada a reparaciones, ingeniería y montajes en el ámbito fluvial y marítimo portuario."
     />
     <meta
       property="og:description"
-      content="Soluciones integrales en servicios navales y logística. Experiencia y calidad en Argentina."
+      content="Naval Paraná SRL, dedicada a reparaciones, ingeniería y montajes en el ámbito fluvial y marítimo portuario."
     />
     <meta property="og:image" content="/logo.png" />
     <meta property="og:type" content="website" />
@@ -36,7 +36,7 @@
     <meta name="twitter:title" content="Naval Paraná SRL" />
     <meta
       name="twitter:description"
-      content="Servicios navales y logística en Argentina."
+      content="Naval Paraná SRL, dedicada a reparaciones, ingeniería y montajes en el ámbito fluvial y marítimo portuario."
     />
     <meta name="twitter:image" content="/logo.png" />
   </head>
